# Leitstelle

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  alarm_dialog.cpp  alarm_dialog.h  alarm_dialog.ui  alarm_window.cpp  alarm_window.h  alarm_window.ui  crew_window.cpp  crew_window.h  crew_window.ui  digital_clock.h  digital_timer.h  info_window.cpp  info_window.h  info_window.ui  leitstelle.cpp  leitstelle.h  leitstellenwindow.cpp  leitstellenwindow.h  leitstellenwindow.ui  main.cpp  main_window.cpp  main_window.h  main_window.ui  vehicle.cpp  vehicle.h  vehicle_label.cpp  vehicle_label.h  vehicle_label_menu.cpp  vehicle_label_menu.h  vehicle_window.cpp  vehicle_window.h  vehicle_window.ui  xml_aao_reader.cpp  xml_aao_reader.h  xml_vehicle_list_reader.cpp  xml_vehicle_list_reader.h
src/resources/: info_notfallpraxis-kinder.txt  info_notfallpraxis.txt  info_zahnaerztlicher-notdienst.txt  resources.qrc  styles.qss  vehicles.xml
src/resources/kln/: aao.xml  crew.txt  info_apotheken-notdienst.txt  info_augenaerztlicher-notdienst.txt  resources.qrc  vehicles.xml
src/resources/lgf/: aao.xml  info_tieraerztlicher-notdienst.txt  vehicles.xml
